fix: remove overflow 2

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ body {
   place-items: center;
   min-width: 100vw;
   min-height: 100%;
+  overflow: hidden;
 }
 
 
